# Fields2Cover

./: .clang-format  .gitignore  AUTHORS  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTORS  Dockerfile  Dockerfile.arm64  Dockerfile.production  LICENSE  README.rst  blog_posts.md  migration_to_v2.txt  package.xml
docs/: .conf.py.swp  CMakeLists.txt  Doxyfile.in  conf.py  index.rst  refs.bib  requirements.txt
docs/_templates/: layout.html
docs/api/: class_view_hierarchy.rst.include  classf2c_1_1Parser.rst  classf2c_1_1Random.rst  classf2c_1_1Transform.rst  classf2c_1_1Visualizer.rst  classf2c_1_1hg_1_1ConstHL.rst  classf2c_1_1hg_1_1HeadlandGeneratorBase.rst  classf2c_1_1obj_1_1CompleteTurnPathObj.rst  classf2c_1_1obj_1_1DirectDistPathObj.rst  classf2c_1_1obj_1_1FieldCoverage.rst  classf2c_1_1obj_1_1GlobalObjective.rst  classf2c_1_1obj_1_1NSwath.rst  classf2c_1_1obj_1_1OptimizationClass.rst  classf2c_1_1obj_1_1Overlaps.rst  classf2c_1_1obj_1_1PathObjective.rst  classf2c_1_1obj_1_1SwathLength.rst  classf2c_1_1pp_1_1DubinsCurves.rst  classf2c_1_1pp_1_1DubinsCurvesCC.rst  classf2c_1_1pp_1_1PathPlanning.rst  classf2c_1_1pp_1_1ReedsSheppCurves.rst  classf2c_1_1pp_1_1ReedsSheppCurvesHC.rst  classf2c_1_1pp_1_1TurningBase.rst  classf2c_1_1rp_1_1BoustrophedonOrder.rst  classf2c_1_1rp_1_1SingleCellSwathsOrderBase.rst  classf2c_1_1rp_1_1SnakeOrder.rst  classf2c_1_1sg_1_1BruteForce.rst  classf2c_1_1sg_1_1SwathGeneratorBase.rst  classf2c_1_1types_1_1EmptyDestructor.rst  classf2c_1_1types_1_1Geometries_1_1ConstIterator.rst  classf2c_1_1types_1_1Geometries_1_1Iterator.rst  define_Cell_8h_1aa859d5687e71e4b249a91532f1f1889a.rst  define_Cells_8h_1a63865564d7ef47f9dad421547c7844aa.rst  define_Field_8h_1a1a0fb63e655138f4c5d164d9a330056a.rst  define_Geometries_8h_1a08493917cd906695192e3af5fbd2d242.rst  define_Geometry_8h_1a02c8ebdccd67f9d75cd158396a78372d.rst  define_LineString_8h_1a984b15cc4822d1c234963d55ec73c718.rst  define_LinearRing_8h_1a9d2f9a36552b6139a2b0061a9a589e07.rst  define_MultiLineString_8h_1a4275de6ed35c791016609e75bef2d690.rst  define_MultiPoint_8h_1abff4e541a428abf78b6b1c920b414321.rst  define_OptimizationParams_8h_1a76143472fadbdc99cbb6982fed595f87.rst  (+193 more)
docs/source/: faq.rst  installation.rst  migration_to_v2.rst  tutorials.rst  web-api.rst
docs/source/tutorials/: .basic_types.rst.swp  basic_types.rst  complete_flow.rst  decomposition.rst  headland_generator.rst  objective_functions.rst  path_planning.rst  python_basic_types.rst  python_complete_flow.rst  python_headland_generator.rst  python_objective_functions.rst  python_path_planning.rst  python_route_planning.rst  python_swath_generator.rst  route_planning.rst  swath_generator.rst
swig/: CMakeLists.txt  Fields2Cover.i  optional.i  reference_wrapper.i  std_unique_ptr.i
swig/python/: CMakeLists.txt  Fields2Cover.i  MANIFEST.in  __init__.py.in  optional.i  pyproject.toml  reference_wrapper.i  setup.py.in
tests/: CMakeLists.txt  unittests.cpp
tests/cpp/decomposition/: boustrophedon_decomp_test.cpp  no_decomp_test.cpp  trapezoidal_decomp_test.cpp
tests/cpp/headland_generator/: const_hl_test.cpp  headland_generator_base_test.cpp  req_hl_test.cpp
tests/cpp/objectives/: complete_turn_path_obj_test.cpp  field_coverage_test.cpp  n_swath_test.cpp  optimization_class_test.cpp  path_length_test.cpp  pp_obj_test.cpp  rem_area_test.cpp  rp_obj_test.cpp  sg_obj_test.cpp  swath_length_test.cpp
tests/cpp/path_planning/: dubins_cc_test.cpp  dubins_test.cpp  path_planning_checker.hpp  path_planning_test.cpp  reeds_shepp_hc_test.cpp  reeds_shepp_test.cpp
tests/cpp/route_planning/: boustrophedon_order_test.cpp  custom_order.cpp  custom_order_test.cpp  rev_spiral_order_test.cpp  route_planner_base_test.cpp  snake_order_test.cpp  soil_comp_route_planner_test.cpp  spiral_order_test.cpp
tests/cpp/swath_generator/: brute_force_test.cpp  oksanen_heuristic.cpp  swath_generator_checker.hpp
tests/cpp/test_helpers/: path_planning_checker.hpp  robot_data.hpp  route_order_checker.hpp  swath_generator_checker.hpp
tests/cpp/types/: Cell_test.cpp  Cells_test.cpp  Field_test.cpp  Geometries_test.cpp  Geometry_test.cpp  Graph2D_test.cpp  Graph_test.cpp  LineString_test.cpp  LinearRing_test.cpp  MultiLineString_test.cpp  MultiPoint_test.cpp  PathSimpState_test.cpp  PathSimp_test.cpp  PathState_test.cpp  Path_test.cpp  Point_test.cpp  RobotWheel_test.cpp  Robot_test.cpp  Route_test.cpp  Strip_test.cpp  Swath_test.cpp  SwathsByCells_test.cpp  Swaths_test.cpp
tests/cpp/utils/: geometryOp_test.cpp  parser_test.cpp  random_test.cpp  solver_test.cpp  spline_test.cpp  transform_test.cpp  visualizer_test.cpp
tests/headland_generator/: const_hl_test.cpp
tests/objectives/: complete_turn_path_obj_test.cpp  direct_dist_path_obj_test.cpp  field_coverage_test.cpp  n_swath_test.cpp  overlaps_test.cpp
tests/path_planning/: dubins_test.cpp  reeds_shepp_test.cpp
tests/python/: import_f2c_test.py
tests/python/headland_generator/: const_hl_test.py
tests/python/objectives/: complete_turn_path_obj_test.py  direct_dist_path_obj_test.py  field_coverage_test.py  n_swath_test.py  optimization_class_test.py  (+2 more)
tests/route_planning/: boustrophedon_order_test.cpp  custom_order.cpp  spiral_order_test.cpp
tests/swath_generator/: brute_force_test.cpp
tests/types/: Cells_test.cpp  Field_test.cpp  Geometries_test.cpp  MultiPoint_test.cpp  Path_test.cpp  Point_test.cpp  Swath_test.cpp
tests/utils/: parser_test.cpp  transform_test.cpp  visualizer_test.cpp
tutorials/: 1_basic_types.cpp  2_objective_functions.cpp  3_headland_generator.cpp  4_swath_generator.cpp  5_route_planning.cpp  6_path_planning.cpp  7_complete_flow.cpp  7_decomposition.cpp  8_complete_flow.cpp  9_transport_lanes.cpp  CMakeLists.txt  complete_path_generator.cpp  discretize_swath_path.cpp  quick_start.cpp
tutorials/python/: 1_basic_types.py  2_objective_functions.py  3_headland_generator.py  4_swath_generator.py  5_route_planning.py  6_path_planning.py  7_complete_flow.py  7_decomposition.py  8_complete_flow.py  9_transport_lanes.py  quick_start.py
(+336 files in other folders)
